<resources>
    <string name="app_name">SPAID</string>
    <string name="welcome_to_spaid">Welcome to Spaid</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="nameedittext">nameEditText</string>
    <string name="gender">Gender</string>
    <string name="contact_person">Contact Person</string>
    <string name="number_information">Number Information</string>
    <string name="ceate_account">Ceate Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="informationNumber">Number Information</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
</resources>