<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="35dp"
        android:text="@string/welcome_to_spaid"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:layout_width="340dp"
        android:layout_height="238dp"
        android:src="@drawable/spaidlogo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/emailSignin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:hint="     Email"
        android:textColorHint="@color/light_gray"
        android:background="@drawable/roundedcornerrectangle"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="HardcodedText,TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Textpassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:hint="   Password"
        android:textColorHint="@color/light_gray"
        android:background="@drawable/roundedcornerrectangle"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="HardcodedText,TextContrastCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/roundedcornerrectangle"
        android:backgroundTint="@color/light_blue_500"
        android:text="@string/sign_up"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/log_in"
        android:background="@drawable/roundedcornerrectangle"
        android:backgroundTint="@color/light_blue_500"
        app:cornerRadius="20dp"/>


</LinearLayout>